# cpd-ChipLib

./: CIFdisplay.pro  Cif.cpp  Cif.h  Globals.cpp  Globals.h  GraphicsLayer.h  GraphicsLayerView.cpp  GraphicsLayerView.h  Main.cpp  MainWin.cpp  MainWin.h  MainWin.ui  README.md
ChipDisplay/: CIFdisplay.pro  ChipDisplay.pro  GDLG.cpp  GDLG.h  GraphicsLayerView.h  GraphicsSceneLG.cpp  GraphicsSceneLG.h  Main.cpp  MainWin.cpp  MainWin.h  MainWin.ui  PainterLG.cpp  PainterLG.h
ChipDump/: ChipDump.pro  Main.cpp
ChipLib/: CMakeLists.txt  Chip.cpp  Chip.h  ChipLib.pri  Cif.cpp  Cif.h  Globals.cpp  Globals.h  LayerGraphics.h
ChipLib/Cif/: Cif.cpp  Cif.h
ChipLib/IO/: Cif.cpp  Cif.h
Docs/: whathappens.txt
